12. Allow info and error notifications to be client specific - so will only show
    if Material's active player ID matches that supplied.
13. Fix downloading playlist.
14. Fix downloading individual tracks from playlists.
15. Don't allow adjusting volume via mouse wheel in group volume or 'Manage
    players' dialogs.
16. Add player icon mapping for HTTP and Alexa.

2.6.3
-----
1. Fix parsing of BBC Sounds error response.
2. Revert webapp manifest back to "standalone" as some users report issues
   with "fullscreen"
3. Use composer, conductor, band, etc, in window titlebar as per elsewhere.
4. Set HTML meta theme-color to botton toolbar colour.
5. Fix incorrectly treating LMS icon strings as Material icons.
6. Only show zoom and fullscreen buttons in image view for desktop devices.
7. Use LMS method to retrieve complete favourites listing.

2.6.2
-----
1. Fix browser tab/title not showing song details.
2. Call icon mapping code for items in 'My Music' and favourites.
3. Fix downloading a 'Various Artists' album from 'New Music'.
4. Move 'Abort all' downloads button into toolbar.
5. When downloading, if track has no album artist then see if we can use the
   value from the current browse history. If this still fails and the track is
   marked as part of a compilation then use LMS's 'Various Artists' string.
6. Add support for sending notifications from perl to webapp.

2.6.1
-----
 1. Fix icon sizes of player status icons (sync, sleep) in main toolbar, and
    'Manage players' dialog.
 2. Fix icon size of launch mini player icon in player menu.
 3. Dim player status icons in main toolbar, and 'Manage players' dialog.
 4. Dim time remaining label in sleep dialog.
 5. Don't allow download from iOS, doesn't work.
 6. Allow setting a custom window title via 'windowTitle' server-side preference
    file. e.g. set "windowTitle: 'Test'" in "prefs/plugin/material-skin.prefs"
 7. Allow setting manifest short name via 'shortTitle' server-side preference
    file.