@@ -71,7 +71,7 @@
 "Audio":"",
 "Auto-scroll to current track":"",
 "Automatic":"",
-"Automatically sort items on the home screen. Required for iPhone due to this not supporting drag-and-drop.":"",
+"Automatically sort items on the home screen.":"",
 "Band":"",
 "Bands":"",
 "Basic options":"",
