@@ -65,7 +65,7 @@
 "Audio":"Audio",
 "Auto-scroll to current track":"Automaticky posouvat na aktuální skladbu",
 "Automatic":"Automaticky",
-"Automatically sort items on the home screen. Required for iPhone due to this not supporting drag-and-drop.":"Automaticky řadit položky na domovské obrazovce. Vyžadováno pro iPhone, jelikož neumožňuje drag-and-drop.",
+"Automatically sort items on the home screen.":"Automaticky řadit položky na domovské obrazovce.",
 "Band":"Skupina",
 "Bands":"Skupin",
 "Basic options":"Základní nastavení",
