@@ -71,7 +71,7 @@
 "Audio":"Lyd",
 "Auto-scroll to current track":"Vis automatisk næste nummer i køen",
 "Automatic":"Automatisk",
-"Automatically sort items on the home screen. Required for iPhone due to this not supporting drag-and-drop.":"Sorter automatisk menupunkter for forsiden. Krævet på iPhone da denne ikke understøtter træk-og-slip.",
+"Automatically sort items on the home screen.":"Sorter automatisk menupunkter for forsiden.",
 "Band":"Gruppe",
 "Bands":"Grupper",
 "Basic options":"Grundlæggende indstillinger",
