@@ -71,7 +71,7 @@
 "Audio":"Audio",
 "Auto-scroll to current track":"Automatisch zu aktuellem Titel springen",
 "Automatic":"Automatisch",
-"Automatically sort items on the home screen. Required for iPhone due to this not supporting drag-and-drop.":"Hauptmenüeinträge automatisch sortieren. Wird für iOS-Geräte benötigt, da diese Drag'n'Drop nicht unterstützen.",
+"Automatically sort items on the home screen.":"Hauptmenüeinträge automatisch sortieren.",
 "Band":"Gruppe",
 "Bands":"Gruppen",
 "Basic options":"Grundeinstellungen",
