@@ -69,7 +69,7 @@
 "Audio":"Audio",
 "Auto-scroll to current track":"Aller automatiquement au morceau en cours",
 "Automatic":"Automatique",
-"Automatically sort items on the home screen. Required for iPhone due to this not supporting drag-and-drop.":"Tri automatique des éléments de l'écran d'accueil. Nécessaire pour l'iPhone car il ne prend pas en charge le glisser-déposer.",
+"Automatically sort items on the home screen.":"Tri automatique des éléments de l'écran d'accueil.",
 "Band":"Groupe/orchestre",
 "Bands":"Groupes/Orchestres",
 "Basic options":"Options de base",
