@@ -42,7 +42,7 @@
 "Audio":"Audio",
 "Auto-scroll to current track":"Scorrimento automatico fino alla trccia corrente",
 "Automatic":"Automatico",
-"Automatically sort items on the home screen. Required for iPhone due to this not supporting drag-and-drop.":"Ordinare automaticamente gli elemnti nella schermata home. Necessario per iPhone perché non supporta il drag-and-drop.",
+"Automatically sort items on the home screen.":"Ordinare automaticamente gli elemnti nella schermata home.",
 "Browse":"Sfoglia",
 "Browse music library":"Sfoglia libreria musicale",
 "CD Player":"Lettore CD",
