@@ -69,7 +69,7 @@
 "Audio":"Audio",
 "Auto-scroll to current track":"Automatisch naar het huidige nummer gaan",
 "Automatic":"Automatisch",
-"Automatically sort items on the home screen. Required for iPhone due to this not supporting drag-and-drop.":"Automatisch sorteren van items op startpagina. Verplicht voor iPhone aangezien drag-en-drop niet wordt ondersteund.",
+"Automatically sort items on the home screen.":"Automatisch sorteren van items op startpagina.",
 "Band":"Band",
 "Bands":"Band",
 "Basic options":"Basis opties",
