@@ -69,7 +69,7 @@
 "Audio":"Аудио",
 "Auto-scroll to current track":"Переключаться на проигрываемое",
 "Automatic":"Автоматически",
-"Automatically sort items on the home screen. Required for iPhone due to this not supporting drag-and-drop.":"Автоматически сортировать элементы на главном экране. Требуется для iPhone, т.к он не поддерживает перетаскивание",
+"Automatically sort items on the home screen.":"Автоматически сортировать элементы на главном экране.",
 "Band":"Группа",
 "Bands":"Группы",
 "Basic options":"Бызовые опции",
