@@ -23,6 +23,7 @@
 15. Don't allow adjusting volume via mouse wheel in group volume or 'Manage
     players' dialogs.
 16. Add player icon mapping for HTTP and Alexa.
+17. Remove note stating iPhone does not support drag'n'drop.
 
 2.6.3
 -----
